# knowledge_system

./: .gitattributes  .gitignore  CURRENT_PROJECT_PROGRESS.md  README_steel_system_recovery.md  TEP_EXPERIMENT_PROTOCOL_RESULTS.md  copy_main_steel_system.ps1
data_knowledge_extraction_recovered_20260618_183738/: DELETED_FILE_RECORDS.csv  GENERATED_IMAGE_MANIFEST.csv  RECOVERY_MANIFEST.csv  RECOVERY_README.md  RECOVERY_SUMMARY.json
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/RAG/: README.md
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/RAG/atom_scaffold/: atom_decomposition_result_summary.csv  atom_decomposition_result_summary.json  atom_decomposition_result_table.tex
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/RAG/docs/: advanced_anomaly_traceability_experiment_groups.md  frontier_knowledge_extraction_baselines.md  knowledge_extraction_dataset_design.md  mechanism_kg_high_level_experiment_design.md  paper_method_chapter_plm_llm_kg_traceability.md  traceability_expert_audit_protocol.md
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/RAG/experiments/: build_advanced_traceability_experiment_groups.py  build_baosteel_knowledge_extraction_dataset.py  build_experiment_research_plan.py  build_mechanism_kg_experiment_plan.py  build_quality_traceability_large_kg_pack.py  build_traceability_paper_evidence_pack.py  evaluate_local_plm_baseline.py  experiment_status.py  extended_plm_baselines.py  fill_assistant_traceability_audit.py  plm_external_adapters.template.json  prompt_atom_decomposition_experiment.py  prompt_engineering_ablation.py  run_advanced_traceability_pilot_experiment.py  run_atom_decomposition_result_experiment.py  run_experiment_suite.py  run_local_plm_baseline.py  run_mechanism_kg_seed_experiment.py  run_paper_demo_traceability_experiment.py  validate_knowledge_extraction_dataset.py
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/RAG/tests/: test_advanced_traceability_experiment_groups.py  test_advanced_traceability_pilot_experiment.py  (+12 more)
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/prompt_paper_english/: cas-refs.bib
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/: .gitignore
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/: .gitignore  .hfignore  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  app.py  meson.build  meson.options  pyproject.toml  render.yaml  requirements-dash.txt
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/.claude/skills/TEP/: SKILL.md
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/.github/workflows/: tests.yml
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/data/: README.md
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/docs/: HOSTING.md  api.md  cli.md  dashboard.md  python_backend.md  rieth2017_dataset.md
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/examples/: README.md  basic_simulation.py  custom_controller.py  data_generation.py  fault_detection.py  introduction.ipynb  rieth2017_dataset.py
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/exercises/: 01-beginner.org  02-intermediate.org  03-advanced.org
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/fortran/: meson.build  temain_mod.f  teprob.f  teprob.pyf
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/skillz/: README.md
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/skillz/TEP/: cli-reference.md  fault-detection.md
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/src/tep/: __init__.py  cli.py  constants.py  controller_base.py  controller_plugins.py  controllers.py  dashboard_dash.py  detector_base.py  detector_plugins.py  fortran_backend.py  meson.build  python_backend.py  simulator.py
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/src/tep/_fortran/: __init__.py  meson.build
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/数据知识抽取/knowledge_exports/public_datasets/tep/raw/extracted/tennessee-eastman-profbraatz-master/tests/: __init__.py  test_cli.py  test_constants.py  test_controllers.py  test_detector.py  test_python_backend.py  test_simulator.py
data_knowledge_extraction_recovered_20260618_183738/recovered_project_files/溯源系统/: integrate_mechanism_kg.py  seed_neo4j.py
(+1977 files in other folders)
